<resources>
    <string name="app_name">PowerFit</string>
    <string name="logIn_SN">SIGN IN</string>
    <string name="in">Olvidaste la contraseña?</string>
    //Home
    <string name="home_prof">Perfil administrador</string>
    <string name="home_logOut">Esta seguro que desea salir de la sesión</string>
    <string name="home_btn_volver">Quiero volver</string>
    <string name="home_btn_logOut">Quiero salir</string>
    <string name="home_name">Bienvenido McLovin</string>
    <string name="home_mail">admin@admin.com</string>
    <string name="home_saludo">Hola McLovin! Gracias por impulsar nuestro club hacia el éxito!</string>
    <string name="home_security_edit">Seguridad</string>
    <string name="home_profile_edit">Editar perfil</string>
    <string name="home_profite_layout">Bienvenida e inicio de perfil</string>
    //Botones
    <string name="btnIn">Ingresar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_add">Agregar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_log_out">Salir</string>
    <string name="btn_pagar_card">Pagarr</string>
    <string name="btn_socios_carnet">Emitir carnet</string>
    <string name="btn_emitir_factura">Emitir factura</string>
    <string name="btn_ver_factura">Ver factura</string>
    <string name="btn_volver">Volver</string>
    //altImages
    <string name="logo">imgLogo</string>
    //inputs text Login pages
    <string name="form_nameIn">Nombre del usuario</string>
    <string name="form_PassIn">Contraseña</string>
    <string name="form_mailRecovered">Ingresa tu mail</string>
    <string name="form_codeP">Código</string>
    <string name="form_title_ress">Restablacer la contraseña</string>
    <string name="form_pass_ress">Nueva contraseña</string>
    <string name="form_pass_ress_Ok">Repite la contraseña</string>
    //Modal Carteles
    <string name="modal_recover_pass"> Olvidaste tu contraseña? Intenta recuperarla! Ingresa tu correo y revisa el codigo enviado</string>
    <string name="modal_recover_code"> Ingresa el código de seis dígitos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pages_title">Panel de control general</string>
    //----------------PAGES----------------//
    //---------GESTION MIEMBROS-----------//
    //-----------------------------------//
    <string name="gestion_sub_title">Gestión de miembros</string>
    <string name="gestion_fragmentUno">Datos personales</string>
    <string name="gestion_fragmentDos">Otros datos</string>
    <string name="gestion_carnet_enviado">Carnet enviado</string>
    //Form
    <string name="gestion_form_name">Nombre</string>
    <string name="gestion_form_lastName">Apellido</string>
    <string name="gestion_form_dni">DNI</string>
    <string name="gestion_form_mail">Correo</string>
    <string name="gestion_form_domicilio">Domicilio</string>
    <string name="gestion_form_nacimiento">Fecha de nacimiento</string>
    <string name="gestion_telefono">Número telefónico</string>
    <string name="gestion_form_sociok">Es socio?</string>
    <string name="gestion_apto_fisico">Tiene apto físico?</string>

    //----------------PAGES----------------//
    //---------PAGO CUOTA MENSUAL---------//
    //-----------------------------------//

    <string name="pacocuota_sub_title">Pago mensual de la cuota</string>
    <string name="pagocuota_subT">Datos del socio</string>
    <string name="pagocuota_dni">DNI</string>
    <string name="pagocuota_monto">Monto</string>
    <string name="pagocuota_metodo">Método de pago</string>
    <string name="pagocuota_pagocash">Efectivo</string>
    <string name="pagocuota_pagocard">Tarjeta</string>
    <string name="pagocuota_pagocard_title">Datos de la tarjeta</string>
    <string name="pagocuota_pagoconfirm_title">Confirmar pago</string>
    <string name="pagocuota_factura_ok">Factura enviada</string>
    //Form
    <string name="pagocuota_pagocard_num">Número</string>
    <string name="pagocuota_pagocard_desde">Desde</string>
    <string name="pagocuota_pagocard_hasta">Hasta</string>
    <string name="pagocuota_pagocard_nomape">Apellido y nombre</string>
    <string name="pagocuota_pagocard_clave">Clave</string>
    <string name="pagocuota_pagocard_cuotas">Cuotas</string>
    //----------------PAGES----------------//
    //---------PAGO DE ACTIVIDAD---------//
    //-----------------------------------//
    <string name="pagoActivi_sub_title">Pago de actividad</string>
    <string name="pagoActivi_subT">Datos a ingresar</string>
    <string name="pagoActivi_metodo">Método de pago</string>
    <string name="pagoActivi_pagocash">Efectivo</string>
    <string name="pagoActivi_pagocard">Tarjeta</string>
    <string name="pagoActivi_pagocard_title">Datos de la tarjeta</string>
    //Form
    <string name="pagoActivi_dni">DNI</string>
    <string name="pagoActivi_monto">Monto</string>
    <string name="pagoActivi_activi">Seleccionar ctividades</string>
    //datos repeti2
    //----------------PAGES----------------//
    //-------------LISTA MOROSOS----------//
    //-----------------------------------//
    <string name="morosos_SUbT">Cuotas vencidas</string>
    <string name="morosos_lista_subT">Detalle de vencimiento</string>
    <string name="morosos_btn_notificar">NOTIFICAR</string>
</resources>
