<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".pages.components.SociosFragmentOne">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestion_fragmentUno"
            android:textColor="@color/greyDos"
            android:textSize="16sp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_form"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/gestion_form_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_form_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_form_ligth_blue"
                android:drawablePadding="15dp"
                android:ems="15"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastN_form"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:hint="@string/gestion_form_lastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastN_form_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_form_ligth_blue"
                android:drawablePadding="15dp"
                android:ems="15"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dni_form"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:hint="@string/gestion_form_dni">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dni_form_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_form_ligth_blue"
                android:drawablePadding="15dp"
                android:ems="15"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_form"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:hint="@string/gestion_form_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_form_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_form_ligth_blue"
                android:drawablePadding="15dp"
                android:ems="15"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"

            android:src="@drawable/arrob" />


    </LinearLayout>


</FrameLayout>