<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo"
    tools:context=".pages.navigation.PagoCuotaMensual">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="3dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logopowergris"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="690dp"
            android:background="@mipmap/fondo_blanco"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="99dp">

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="68dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pages_title"
                    android:textColor="@color/pastelPurple"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/pacocuota_sub_title"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/pagocuota_subT"
                    android:textColor="@color/greyDos"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pago_cuota_dni_form"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:hint="@string/pagocuota_dni">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dni_socio_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_form_ligth_blue"
                        android:drawablePadding="15dp"
                        android:ems="15"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastN_form"
                    android:layout_width="320dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:hint="@string/pagocuota_monto">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/monto_socio_value"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit_text_form_ligth_blue"
                        android:drawablePadding="15dp"
                        android:ems="15"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/pagocuota_metodo"
                    android:textColor="@color/greyDos"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_cash"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="100dp"
                        android:background="@drawable/cash"
                        android:textAllCaps="false"
                        android:text="."
                        android:textSize="18sp"
                        android:textStyle="normal"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_card"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card"
                        android:textAllCaps="false"
                        android:text="."
                        android:textSize="18sp"
                        android:textStyle="normal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="100dp"
                        android:text="@string/pagocuota_pagocash"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/pagocuota_pagocard"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>