<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.components.PagoCuotaMensualTwo">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="8dp"
            android:text="@string/pagocuota_pagocard_title"
            android:textColor="@color/greyDos"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_form"
            android:layout_width="320dp"
            android:layout_height="60dp"

            android:hint="@string/pagocuota_pagocard_clave">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_form_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_form_ligth_blue"
                android:ems="15"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


       <Spinner
           android:id="@+id/spiner_option"
           android:background="@drawable/edit_text_form_ligth_blue"
           android:layout_marginTop="10dp"
           android:layout_width="320dp"
           android:layout_height="60dp"
           android:paddingStart="10dp"
           android:pointerIcon="arrow"
           >


       </Spinner>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pagar_cuota"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_button_selector"
            android:text="@string/btn_pagar_card"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            />
    </LinearLayout>

</FrameLayout>