<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo"
    tools:context=".pages.LogInPage">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="330dp"
       android:paddingBottom="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/logopowergris" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logIn_SN"
            android:textColor="@color/blue"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_conteiner"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:hint="@string/form_nameIn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:passwordToggleTint="@color/greyDos"
            app:startIconDrawable="@drawable/user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameuser_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_rounded"
                android:drawablePadding="15dp"
                android:ems="15"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/name_errorR"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text=""
            android:textAlignment="textStart"
            android:textColor="@color/redm"
            android:textSize="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pasword_conteiner"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/form_PassIn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/greyDos"
            app:startIconDrawable="@drawable/pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pasword_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_rounded"
                android:drawablePadding="15dp"
                android:ems="15"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/pass_error_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="35dp"
            android:paddingTop="10dp"
            android:text=""
            android:textAlignment="textStart"
            android:textColor="@color/redm"
            android:textSize="15dp"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/recupera_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="30dp"
        android:layout_marginBottom="40dp"
        android:text="@string/in"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/border_button_selector"
        android:text="@string/btnIn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>